plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.6'
    id 'application'
    id 'me.champeau.jmh' version '0.7.3'
}


/*bootRun {
    jvmArgs = [
            "-XX:+UnlockDiagnosticVMOptions",
            "-XX:+PrintCompilation",
            "-XX:+LogCompilation",
            "-XX:-TieredCompilation",
            "-XX:LogFile=compilacion.xml"
    ]
}*/

// GC execution with Parallel GC. High time ratio (10:1)
/*bootRun {
    jvmArgs = [
            "-Xmx64m",
            "-Xms64m",
            "-XX:GCTimeRatio=9",
            //"-XX:+UseSerialGC",
            "-XX:+UseParallelGC"
            //"-XX:MaxGCPauseMillis=100" //,
            //"-XX:+PrintGCDetails"
    ]
}*/
// GC execution with G1GC. Customized to use with 16 cores
/*bootRun {
    jvmArgs = [
            "-Xmx64m",
            "-Xms64m",
            "-XX:GCTimeRatio=9",
            "-XX:ParallelGCThreads=16"  //see lscpu | grep -E 'Core|Thread|CPU'
            //"-XX:+UseSerialGC",
            //"-XX:+UseParallelGC"
            //"-XX:MaxGCPauseMillis=100" //,
            //"-XX:+PrintGCDetails"
    ]
}*/

sourceSets {
    jmh {
        java.srcDirs('src/jmh/java')
        resources.srcDirs('src/jmh/resources')
        compileClasspath += sourceSets.main.runtimeClasspath
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'com.starwars.App'
        )
    }
}

group 'com.starwars'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-web:3.0.6'
    implementation 'org.springframework.boot:spring-boot-starter-webflux:3.0.6'
    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure', version: '3.0.6'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.6'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.8'
    implementation 'org.json:json:20210307'
    implementation 'com.jayway.jsonpath:json-path:2.6.0'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.0.6'
    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.15'
    implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.15'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'

    implementation("io.micrometer:micrometer-registry-prometheus:latest.release")

    // JAX-B dependencies for JDK 9+
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'

    compileOnly 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.22'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'

    jmh 'org.openjdk.jmh:jmh-core:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    jmh 'org.openjdk.jmh:jmh-generator-bytecode:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

test {
    useJUnitPlatform()
}
